%% Приложение Б — ER-диаграмма базы данных MONO
%% Экспорт на лист А4 с рамкой ГОСТ форма 1

erDiagram
    users ||--o{ posts : creates
    users ||--o{ comments : writes
    users ||--o{ reactions : gives
    users ||--o{ messages : sends
    users ||--o{ messages : receives
    users }o--o{ users : follows
    posts ||--o{ comments : has
    posts ||--o{ reactions : has
    comments ||--o{ comments : replies
    messages ||--o{ reactions : has
    users ||--o{ notifications : receives

    users {
        bigint id PK
        string name
        string email UK
        string password
        string role
        string avatar
        text bio
        json interest_tags
        bool notify_on_message
        bool notify_on_follow
        bool notify_on_like
        bool notify_on_comment
    }

    posts {
        bigint id PK
        bigint user_id FK
        text content
        json images
        timestamp created_at
    }

    comments {
        bigint id PK
        bigint post_id FK
        bigint user_id FK
        bigint parent_id FK
        text body
    }

    follows {
        bigint id PK
        bigint follower_id FK
        bigint following_id FK
    }

    messages {
        bigint id PK
        bigint sender_id FK
        bigint receiver_id FK
        text body
        string type
        string attachment_path
        timestamp read_at
    }

    reactions {
        bigint id PK
        bigint user_id FK
        string reactable_type
        bigint reactable_id
        string kind
    }

    notifications {
        uuid id PK
        string type
        text data
        timestamp read_at
    }
